syntax = "proto3";

package tagpost;

option java_multiple_files = true;
option java_package = "com.google.tagpost";
option java_outer_classname = "TagPostRpcProto";

import "src/proto/tagpost.proto";

service TagpostService {
  // fetch all threads by primary tag
  rpc FetchThreadsByTag(FetchThreadsByTagRequest) returns (FetchThreadsByTagResponse) {}

  // add a new thread with a specified primary tag
  rpc AddThreadWithTag(AddThreadWithTagRequest) returns (AddThreadWithTagResponse) {}

  // fetch all comments under one thread
  rpc FetchCommentsUnderThread(FetchCommentsUnderThreadRequest) returns (FetchCommentsUnderThreadResponse) {}

  // add a new comment under a specified thread
  rpc AddCommentUnderThread(AddCommentUnderThreadRequest) returns (AddCommentUnderThreadResponse) {}

  // get a summary of statistics of a specified tag
  rpc GetTagStats(GetTagStatsRequest) returns (GetTagStatsResponse) {}
}

message FetchThreadsByTagRequest {
  string tag = 1;
}

message FetchThreadsByTagResponse {
  repeated Thread threads = 1;
}

message AddThreadWithTagRequest {
  /*
  Fields required to be filled in the request:
  primary_tag, topic
  */
  Thread thread = 1;
}

message AddThreadWithTagResponse {
  Thread thread = 1;
}

message FetchCommentsUnderThreadRequest {
  string thread_id = 1;
}

message FetchCommentsUnderThreadResponse {
  repeated Comment comment = 1;
}

message AddCommentUnderThreadRequest {
  /*
  Fields required to be filled in the request:
  thread_id, comment_content, username, extra_tags
  */
  Comment comment = 1;
}

message AddCommentUnderThreadResponse {
  Comment comment = 1;
}

message GetTagStatsRequest {
  string tag = 1;
}

message GetTagStatsResponse {
  TagStats stats = 1;
}
